Storing the results in a database
Storing the result in an in-memory database
Querying the stored data to display on the screen